--- a/src/main/resources/sample.fxml
+++ b/src/main/resources/sample.fxml
@@ -1,16 +1,49 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
+<?import javafx.scene.control.ListView?>
+<?import javafx.scene.control.Separator?>
+<?import javafx.scene.control.TextArea?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
-<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.layout.RowConstraints?>
 
-
-<GridPane alignment="center" hgap="10" vgap="10" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8.0.141" fx:controller="sample.Controller">
+<GridPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="671.0" prefWidth="886.0" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1">
+   <columnConstraints>
+      <ColumnConstraints hgrow="SOMETIMES" maxWidth="130.5" minWidth="10.0" prefWidth="30.0" />
+      <ColumnConstraints hgrow="SOMETIMES" maxWidth="240.0" minWidth="10.0" prefWidth="145.5" />
+      <ColumnConstraints hgrow="SOMETIMES" maxWidth="132.5" minWidth="10.0" prefWidth="24.5" />
+      <ColumnConstraints hgrow="SOMETIMES" maxWidth="235.0" minWidth="10.0" prefWidth="166.0" />
+      <ColumnConstraints hgrow="SOMETIMES" maxWidth="235.0" minWidth="0.0" prefWidth="0.0" />
+      <ColumnConstraints hgrow="SOMETIMES" maxWidth="418.0" minWidth="0.0" prefWidth="258.0" />
+      <ColumnConstraints hgrow="SOMETIMES" maxWidth="295.5" minWidth="10.0" prefWidth="155.5" />
+      <ColumnConstraints hgrow="SOMETIMES" maxWidth="101.5" minWidth="0.0" prefWidth="32.5" />
+   </columnConstraints>
+   <rowConstraints>
+      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+      <RowConstraints maxHeight="154.0" minHeight="10.0" prefHeight="154.0" vgrow="SOMETIMES" />
+      <RowConstraints maxHeight="72.5" minHeight="0.0" prefHeight="0.0" vgrow="SOMETIMES" />
+      <RowConstraints maxHeight="208.0" minHeight="10.0" prefHeight="50.5" vgrow="SOMETIMES" />
+      <RowConstraints maxHeight="203.5" minHeight="10.0" prefHeight="39.0" vgrow="SOMETIMES" />
+      <RowConstraints maxHeight="208.0" minHeight="10.0" prefHeight="208.0" vgrow="SOMETIMES" />
+      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+   </rowConstraints>
    <children>
-      <VBox prefHeight="200.0" prefWidth="100.0">
-         <children>
-            <Button mnemonicParsing="false" text="Button" />
-         </children>
-      </VBox>
+      <TextField alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="25.0" prefWidth="159.0" text="Trein naam" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+      <Button mnemonicParsing="false" prefHeight="25.0" prefWidth="160.0" text="Nieuwe trein aanmaken" GridPane.columnIndex="1" GridPane.rowIndex="4" />
+      <TextField prefHeight="25.0" prefWidth="164.0" text="Enter text" GridPane.columnIndex="5" GridPane.rowIndex="7" />
+      <Button alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" prefHeight="25.0" prefWidth="178.0" text="Submit" GridPane.columnIndex="6" GridPane.rowIndex="7" />
+      <Button mnemonicParsing="false" prefHeight="25.0" prefWidth="161.0" text="Nieuwe Goederen Wagon" GridPane.columnIndex="3" GridPane.rowIndex="7" />
+      <Button mnemonicParsing="false" prefHeight="25.0" prefWidth="160.0" text="Nieuwe Passagiers Wagon" GridPane.columnIndex="3" GridPane.rowIndex="6" />
+      <Separator orientation="VERTICAL" prefHeight="411.0" prefWidth="6.0" GridPane.columnIndex="4" GridPane.rowIndex="3" GridPane.rowSpan="5" />
+      <Separator prefHeight="5.0" prefWidth="886.0" GridPane.columnSpan="2147483647" GridPane.rowIndex="2" />
+      <TextArea prefHeight="306.0" prefWidth="355.0" GridPane.columnIndex="5" GridPane.columnSpan="2" GridPane.rowIndex="3" GridPane.rowSpan="4" />
+      <ComboBox minWidth="-Infinity" prefHeight="25.0" prefWidth="160.0" promptText="Gemaakte treinen" GridPane.columnIndex="3" GridPane.rowIndex="3" />
+      <ListView prefHeight="260.0" prefWidth="76.0" GridPane.columnIndex="3" GridPane.rowIndex="4" GridPane.rowSpan="2" />
+      <ImageView fitHeight="150.0" fitWidth="793.0" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="1" GridPane.rowIndex="1" />
    </children>
 </GridPane>
