--- a/src/main/resources/train.fxml
+++ b/src/main/resources/train.fxml
@@ -4,6 +4,7 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.ListView?>
+<?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.TextArea?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -72,6 +73,13 @@
             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
          </rowConstraints>
       </GridPane>
-      <Pane fx:id="paneDraw" layoutX="0.0" layoutY="0.0" prefHeight="186.0" prefWidth="1017.0" />
+      <Pane fx:id="paneDraw" layoutX="0.0" layoutY="0.0" prefHeight="186.0" prefWidth="1017.0">
+         <children>
+            <ScrollPane fx:id="imagePane" prefHeight="180.0" prefWidth="1024.0">
+               <content>
+                  <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="200.0" prefWidth="200.0" />
+               </content>
+            </ScrollPane>
+         </children></Pane>
    </children>
 </AnchorPane>
