--- a/src/main/resources/train.fxml
+++ b/src/main/resources/train.fxml
@@ -62,6 +62,7 @@
                   <Insets bottom="31.0" left="259.0" />
                </GridPane.margin>
             </TextField>
+            <Button fx:id="viewTrainsButton" mnemonicParsing="false" text="View all trains" />
          </children>
          <columnConstraints>
             <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -73,13 +74,14 @@
             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
          </rowConstraints>
       </GridPane>
-      <Pane fx:id="paneDraw" layoutX="0.0" layoutY="0.0" prefHeight="186.0" prefWidth="1017.0">
+      <Pane fx:id="paneDraw" prefHeight="186.0" prefWidth="1017.0">
          <children>
             <ScrollPane fx:id="imagePane" prefHeight="180.0" prefWidth="1024.0">
                <content>
                   <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="200.0" prefWidth="200.0" />
                </content>
             </ScrollPane>
-         </children></Pane>
+         </children>
+      </Pane>
    </children>
 </AnchorPane>
