--- a/src/main/resources/train.fxml
+++ b/src/main/resources/train.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import java.lang.*?>
+<?import javafx.collections.*?>
 <?import javafx.geometry.*?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.*?>
@@ -27,7 +28,7 @@
         <Button fx:id="codeSubmit" contentDisplay="LEFT" mnemonicParsing="false" prefHeight="26.0" prefWidth="76.0" text="Submit" />
       </children>
     </FlowPane>
-    <GridPane fx:id="controlPane" layoutX="16.0" layoutY="186.0" prefHeight="576.0" prefWidth="745.0">
+    <GridPane fx:id="controlPane" layoutX="16.0" layoutY="186.0" prefHeight="384.0" prefWidth="745.0">
       <children>
         <TextField fx:id="controlTextfieldAdd" alignment="CENTER_LEFT" maxWidth="180.0" prefWidth="180.0" GridPane.columnIndex="0" GridPane.halignment="LEFT" GridPane.rowIndex="0" GridPane.valignment="TOP">
           <GridPane.margin>
@@ -51,37 +52,52 @@
         </ListView>
         <ListView fx:id="controlAddList" maxWidth="180.0" prefHeight="192.0" prefWidth="180.0" GridPane.columnIndex="0" GridPane.rowIndex="1">
           <GridPane.margin>
-            <Insets bottom="5.0" />
+            <Insets bottom="5.0" top="5.0" />
           </GridPane.margin>
         </ListView>
-        <TextField fx:id="controlAddPass" maxWidth="69.0" prefWidth="180.0" text="Passagiers" GridPane.columnIndex="0" GridPane.halignment="LEFT" GridPane.rowIndex="1" GridPane.valignment="BOTTOM">
+        <TextField id="controlAddPass" fx:id="controlAddNaam" maxWidth="180.0" prefWidth="180.0" text="Naam" GridPane.columnIndex="0" GridPane.halignment="RIGHT" GridPane.rowIndex="1" GridPane.valignment="TOP">
           <GridPane.margin>
-            <Insets bottom="36.0" left="185.0" />
+            <Insets right="5.0" top="35.0" />
           </GridPane.margin>
         </TextField>
-        <TextField fx:id="controlAddKG" maxWidth="69.0" prefWidth="69.0" text="KG " GridPane.columnIndex="0" GridPane.halignment="LEFT" GridPane.rowIndex="1" GridPane.valignment="BOTTOM">
+        <Button fx:id="controlAddButton" mnemonicParsing="false" prefWidth="69.0" text="Add" GridPane.columnIndex="0" GridPane.halignment="RIGHT" GridPane.rowIndex="1" GridPane.valignment="BOTTOM">
           <GridPane.margin>
-            <Insets bottom="36.0" left="259.0" />
+            <Insets bottom="5.0" right="5.0" />
           </GridPane.margin>
-        </TextField>
-        <Button fx:id="controlAddButton" mnemonicParsing="false" text="Add" GridPane.columnIndex="0" GridPane.halignment="LEFT" GridPane.rowIndex="1" GridPane.valignment="BOTTOM">
+        </Button>
+        <Button fx:id="controlRemoveButton" mnemonicParsing="false" text="Delete" GridPane.columnIndex="1" GridPane.halignment="LEFT" GridPane.rowIndex="1" GridPane.valignment="BOTTOM">
           <GridPane.margin>
             <Insets bottom="5.0" left="185.0" fx:id="x1" />
           </GridPane.margin>
         </Button>
-        <Button fx:id="controlRemoveButton" mnemonicParsing="false" text="Delete" GridPane.columnIndex="1" GridPane.halignment="LEFT" GridPane.margin="$x1" GridPane.rowIndex="1" GridPane.valignment="BOTTOM" />
         <ComboBox fx:id="controlSelectBox" prefWidth="180.0" promptText="Select Train" GridPane.columnIndex="1" GridPane.halignment="LEFT" GridPane.rowIndex="0" GridPane.valignment="BOTTOM">
           <GridPane.margin>
             <Insets bottom="5.0" />
           </GridPane.margin>
         </ComboBox>
+        <ComboBox id="controlAddCombobox" fx:id="controlAddSelectBox" prefWidth="180.0" GridPane.columnIndex="0" GridPane.halignment="LEFT" GridPane.rowIndex="1" GridPane.valignment="TOP">
+          <items>
+            <FXCollections fx:factory="observableArrayList">
+              <String fx:value="Item 1" />
+              <String fx:value="Item 2" />
+              <String fx:value="Item 3" />
+            </FXCollections>
+          </items>
+          <GridPane.margin>
+            <Insets left="185.0" top="5.0" />
+          </GridPane.margin>
+        </ComboBox>
+        <TextField id="controlAddPass" fx:id="controlAddAmount" maxWidth="180.0" prefWidth="180.0" text="Hoeveelheid" GridPane.columnIndex="0" GridPane.halignment="RIGHT" GridPane.rowIndex="1" GridPane.valignment="TOP">
+          <GridPane.margin>
+            <Insets right="5.0" top="66.0" />
+          </GridPane.margin>
+        </TextField>
       </children>
       <columnConstraints>
         <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
         <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
       </columnConstraints>
       <rowConstraints>
-        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
         <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
         <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
       </rowConstraints>
