--- a/src/main/resources/train.fxml
+++ b/src/main/resources/train.fxml
@@ -1,12 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.*?>
+<?import javafx.collections.*?>
+<?import javafx.geometry.*?>
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.control.*?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.ListView?>
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.TextArea?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.*?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.FlowPane?>
@@ -14,7 +19,7 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.RowConstraints?>
 
-<AnchorPane id="AnchorPane" fx:id="mainPane" maxHeight="576.0" maxWidth="1024.0" minHeight="576.0" minWidth="1024.0" prefHeight="576.0" prefWidth="1024.0" snapToPixel="true" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Controller">
+<AnchorPane id="AnchorPane" fx:id="mainPane" maxHeight="576.0" maxWidth="1024.0" minHeight="576.0" minWidth="1024.0" prefHeight="576.0" prefWidth="1024.0" snapToPixel="true" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/2.2" fx:controller="sample.Controller">
   <children>
     <FlowPane id="flowPane" fx:id="codePane" layoutX="761.0" layoutY="186.0" minHeight="384.0" prefHeight="384.0" prefWidth="256.0" style="">
       <children>
@@ -23,7 +28,7 @@
         <Button fx:id="codeSubmit" contentDisplay="LEFT" mnemonicParsing="false" prefHeight="26.0" prefWidth="76.0" text="Submit" />
       </children>
     </FlowPane>
-    <GridPane fx:id="controlPane" layoutX="16.0" layoutY="186.0" prefHeight="576.0" prefWidth="745.0">
+    <GridPane fx:id="controlPane" layoutX="16.0" layoutY="186.0" prefHeight="384.0" prefWidth="745.0">
       <children>
         <TextField fx:id="controlTextfieldAdd" alignment="CENTER_LEFT" maxWidth="180.0" prefWidth="180.0" GridPane.columnIndex="0" GridPane.halignment="LEFT" GridPane.rowIndex="0" GridPane.valignment="TOP">
           <GridPane.margin>
@@ -47,33 +52,42 @@
         </ListView>
         <ListView fx:id="controlAddList" maxWidth="180.0" prefHeight="192.0" prefWidth="180.0" GridPane.columnIndex="0" GridPane.rowIndex="1">
           <GridPane.margin>
-            <Insets bottom="5.0" />
+            <Insets bottom="5.0" top="5.0" />
           </GridPane.margin>
         </ListView>
-        <TextField fx:id="controlAddPass" maxWidth="69.0" prefWidth="180.0" text="Passagiers" GridPane.columnIndex="0" GridPane.halignment="LEFT" GridPane.rowIndex="1" GridPane.valignment="BOTTOM">
+        <TextField id="controlAddPass" fx:id="controlAddNaam" maxWidth="180.0" prefWidth="180.0" text="" GridPane.columnIndex="0" GridPane.halignment="RIGHT" GridPane.rowIndex="1" GridPane.valignment="TOP">
           <GridPane.margin>
-            <Insets bottom="36.0" left="185.0" />
+            <Insets right="5.0" top="40.0" />
           </GridPane.margin>
         </TextField>
-        <TextField fx:id="controlAddKG" maxWidth="69.0" prefWidth="69.0" text="KG " GridPane.columnIndex="0" GridPane.halignment="LEFT" GridPane.rowIndex="1" GridPane.valignment="BOTTOM">
+        <Button fx:id="controlAddButton" mnemonicParsing="false" prefWidth="69.0" text="Add" GridPane.columnIndex="0" GridPane.halignment="RIGHT" GridPane.rowIndex="1" GridPane.valignment="BOTTOM">
           <GridPane.margin>
-            <Insets bottom="36.0" left="259.0" />
+            <Insets bottom="5.0" right="5.0" />
           </GridPane.margin>
-        </TextField>
-        <Button fx:id="controlAddButton" mnemonicParsing="false" text="Add" GridPane.columnIndex="0" GridPane.halignment="LEFT" GridPane.rowIndex="1" GridPane.valignment="BOTTOM">
+        </Button>
+        <Button fx:id="controlRemoveButton" mnemonicParsing="false" text="Delete" GridPane.columnIndex="1" GridPane.halignment="LEFT" GridPane.rowIndex="1" GridPane.valignment="BOTTOM">
           <GridPane.margin>
             <Insets bottom="5.0" left="185.0" fx:id="x1" />
           </GridPane.margin>
         </Button>
-        <Button fx:id="controlRemoveButton" mnemonicParsing="false" text="Delete" GridPane.columnIndex="1" GridPane.halignment="LEFT" GridPane.margin="$x1" GridPane.rowIndex="1" GridPane.valignment="BOTTOM" />
         <ComboBox fx:id="controlSelectBox" prefWidth="180.0" promptText="Select Train" GridPane.columnIndex="1" GridPane.halignment="LEFT" GridPane.rowIndex="0" GridPane.valignment="BOTTOM">
           <GridPane.margin>
             <Insets bottom="5.0" />
           </GridPane.margin>
         </ComboBox>
-        <Button mnemonicParsing="false" text="Delete Train" GridPane.columnIndex="1" GridPane.halignment="LEFT" GridPane.rowIndex="1" GridPane.valignment="BOTTOM">
+        <ComboBox id="controlAddCombobox" fx:id="controlAddSelectBox" prefWidth="180.0" GridPane.columnIndex="0" GridPane.halignment="LEFT" GridPane.rowIndex="1" GridPane.valignment="TOP">
           <GridPane.margin>
-            <Insets bottom="5.0" left="240.0" />
+            <Insets left="185.0" top="5.0" />
+          </GridPane.margin>
+        </ComboBox>
+        <TextField id="controlAddPass" fx:id="controlAddAmount" maxWidth="180.0" prefWidth="180.0" text="" GridPane.columnIndex="0" GridPane.halignment="RIGHT" GridPane.rowIndex="1" GridPane.valignment="TOP">
+          <GridPane.margin>
+            <Insets right="5.0" top="75.0" />
+          </GridPane.margin>
+        </TextField>
+        <Button mnemonicParsing="false" text="DeleteTrain" GridPane.columnIndex="0" GridPane.halignment="LEFT" GridPane.rowIndex="1" GridPane.valignment="BOTTOM">
+          <GridPane.margin>
+            <Insets bottom="5.0" left="185.0" fx:id="x1" />
           </GridPane.margin>
         </Button>
       </children>
@@ -82,7 +96,6 @@
         <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
       </columnConstraints>
       <rowConstraints>
-        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
         <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
         <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
       </rowConstraints>
