--- a/src/main/resources/viewtrains.fxml
+++ b/src/main/resources/viewtrains.fxml
@@ -1,16 +1,19 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.*?>
+<?import javafx.scene.control.*?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ScrollPane?>
+<?import javafx.scene.layout.*?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane maxHeight="576.0" maxWidth="1024.0" minHeight="576.0" minWidth="1024.0" prefHeight="576.0" prefWidth="1024.0" snapToPixel="true" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.ViewTrainsController">
-   <children>
-      <ScrollPane fx:id="trainPane" prefHeight="576.0" prefWidth="1024.0">
-        <content>
-          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="200.0" prefWidth="200.0" />
-        </content>
-      </ScrollPane>
-      <Button fx:id="backButton" layoutX="920.0" layoutY="545.0" mnemonicParsing="false" prefHeight="30.0" prefWidth="104.0" text="Back" />
-   </children>
+<AnchorPane maxHeight="576.0" maxWidth="1024.0" minHeight="576.0" minWidth="1024.0" prefHeight="576.0" prefWidth="1024.0" snapToPixel="true" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/2.2" fx:controller="sample.ViewTrainsController">
+  <children>
+    <ScrollPane fx:id="trainPane" prefHeight="576.0" prefWidth="1024.0">
+      <content>
+        <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="200.0" prefWidth="200.0" />
+      </content>
+    </ScrollPane>
+    <Button fx:id="backButton" layoutX="910.0" layoutY="535.0" mnemonicParsing="false" prefHeight="30.0" prefWidth="104.0" text="Back" />
+  </children>
 </AnchorPane>
